<resources>
    <string name="app_name">tracmojo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="not_available_while_offlin">Not available while offline</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="app_id">832477106831516</string>
    <string name="trac">trac</string>
    <string name="mojo">mojo</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="replace_photo">Take Photo</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="photo_from_server">server</string>
    <string name="photo_from_camera">camera</string>
    <string name="photo_from_gallery">gallery</string>
    <string name="photoselection_dialog_header">Select call or message</string>
    <string-array name="PhotoSelectionOptions">
        <item>Call</item>
        <item>Message</item>
        <item>Cancel</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="loading_message">Loading...</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_save_my">Save my User Name &amp; Password</string>
    <string name="activity_login_submit">GO</string>
    <string name="activity_login_or">OR</string>
    <string name="activity_login_forgot_password">Forgot Password?</string>
    <string name="activity_login_new_here">Create an Account</string>
    <string name="activity_login_enter_email">Please enter email</string>
    <string name="activity_login_enter_password">Please enter password</string>
    <string name="activity_login_enter_password_dont_match">Password don\'t match</string>
    <string name="activity_login_enter_valid_email">Please enter valid email</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="forgot_pass_email_hint">Email</string>
    <string name="forgot_pass_send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="activity_registration_header">Sign Up</string>
    <string name="activity_registration_user_name">First Name</string>
    <string name="activity_registration_last_name">Last Name</string>
    <string name="activity_registration_email">Email</string>
    <string name="activity_registration_password">Password</string>
    <string name="activity_registration_confirm_password">Confirm Password</string>
    <string name="activity_registration_phone_number">Phone Number</string>
    <string name="activity_registration_view_privacy_policy">View Privacy Policy</string>
    <string name="activity_registration_view_Terms">Terms of Use</string>
    <string name="activity_registration_view_privacy_policy2">Privacy Policy</string>
    <string name="activity_registration_submit">Create an Account</string>
    <string name="activity_registration_enter_user_name">Please enter first name</string>
    <string name="activity_registration_enter_last_name">Please enter last name</string>
    <string name="activity_registration_enter_last_name_contains_invalid_chars">Last name contains invalid characters</string>
    <string name="activity_registration_enter_first_name_contains_invalid_chars">First name contains invalid characters</string>
    <string name="activity_registration_password_dont_match">Password don\'t match</string>
    <string name="activity_registration_enter_phone_number">Please enter phone number</string>
    <string name="activity_registration_enter_country_code">Please enter country code</string>
    <string name="activity_registration_invalid_phone_number">Invalid phone number</string>
    <string name="activity_registration_check_privacy">Please accept terms of use and privacy policy</string>
    <string name="activity_registration_primary_and_sec_not_same">Please try different email id</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="activity_registration_please_fill_required_detail">Please fill mandatory fields</string>
    <string name="activity_dashboard_home">Home</string>
    <string name="activity_dashboard_settings">Settings</string>
    <string name="activity_dashboard_add">Add trac</string>
    <string name="activity_dashboard_edit">Edit tracs</string>
    <string name="activity_dashboard_my_tracs">my tracs</string>
    <string name="activity_dashboard_group_tracs">group tracs</string>
    <string name="activity_dashboard_followed_tracs">followed tracs</string>
    <string name="edit_tab_manage_my_tracs">manage my tracs</string>
    <string name="edit_tab_manage_group_tracs">manage group tracs</string>
    <string name="edit_tab_manage_followed_tracs">manage followed tracs</string>
    <string name="activity_dashboard_home_no_trac_found">No Tracs Found</string>
    <string name="activity_dashboard_home_not_following_any_tracs">No following tracs found</string>
    <string name="activity_dashboard_home_no_personal_trac_found">No personal tracs found</string>
    <string name="activity_dashboard_home_no_group_trac_found">No group tracs found</string>
    <string name="activity_dashboard_home_first_timer_message">How to use this app? please tap on help icon.</string>
    <string name="activity_dashboard_home_add_personal_trac">Personal trac</string>
    <string name="activity_dashboard_home_add_group_trac">Group trac</string>
        <string name="activity_dashboard_home_add_group_trac2">Create Group Tracs</string>
     <string name="enter_an_invite_code">Enter an invite code</string>
<string name="activity_dashboard_home_add_personal_trac2">Create Personal Tracs</string>
    <string name="activity_add_personal_trac_add_a_per_trac">add a personal trac...</string>
    <string name="activity_add_personal_trac_enter_your_trac_here">Enter your trac here</string>
    <string name="activity_add_personal_trac_or_choose_from_these_trac_ideas">or choose from these trac ideas</string>
    <string name="activity_add_personal_trac_select_the_trac">select the trac rate wording...</string>
    <string name="activity_add_personal_trac_or_enter_your_own_custom_text">or enter your own custom text</string>
    <string name="activity_add_personal_trac_custom_trac_ideas_title">select trac ideas</string>
    <string name="activity_add_personal_trac_custom_trac_wording_title">select trac rate wordings</string>
    <string name="activity_add_personal_trac_enter_trac_idea">Enter trac ideas</string>
    <string name="activity_add_personal_trac_select_trac_wordings">Select trac wordings</string>
    <string name="activity_add_personal_trac_enter_all_wordings">Enter all custom wordings</string>
    <string name="activity_add_personal_trac_back">&lt;Back</string>
    <string name="activity_add_personal_trac_next">Next&gt;</string>
    <string name="activity_add_personal_trac_cust1">Really good</string>
    <string name="activity_add_personal_trac_cust2">Pretty good</string>
    <string name="activity_add_personal_trac_cust3">Ok</string>
    <string name="activity_add_personal_trac_cust4">Poor</string>
    <string name="activity_add_personal_trac_cust5">Very poor</string>
    <string name="activity_add_personal_trac_service_message">Please subscribes our services to add more tracs.</string>
    <string name="activity_set_frequency_of_tracs_for">set frequency of tracs for</string>
    <string name="activity_set_frequncy_as">as...</string>
    <string name="activity_set_frequncy_on">on...</string>
    <string name="activity_set_frequncy_finishing_on">finishing on...</string>
    <string name="activity_set_frequncy_select_trac_frequency_as">select trac frequency as</string>
    <string name="activity_set_frequncy_select_trac_frequency_on">select trac frequency on</string>
    <string name="activity_set_frequncy_finish_date">finish date</string>
    <string name="activity_set_frequncy_enter_trac_ideas">Enter trac ideas</string>
    <string name="activity_set_frequncy_select_frequency_as">Select frequency as</string>
    <string name="activity_set_frequncy_select_frequency_on">Select frequency on</string>
    <string name="activity_set_frequncy_select_finishing_date">Select finishing date</string>
    <string name="activity_invite_followers_add_or_change_participants_of_trac">add or change followers of a trac...</string>
    <string name="activity_invite_followers_participants_invited">followers invited</string>
    <string name="activity_invite_followers_invite_more_participants">invite more followers</string>
    <string name="activity_invite_followers_invite_via_email">invite via email</string>
    <string name="activity_invite_followers_select_from_your_contact_list">select from your contacts list</string>
    <string name="activity_invite_followers_done">Done&gt;</string>
    <string name="activity_invite_followers_invite_no_follower_found">No Follower found</string>
    <string name="activity_invite_participants_invite_no_participant_found">No Participant found</string>
    <string name="fragment_trac_rate">trac rate</string>
    <string name="fragment_trac_rate_done">Done&gt;</string>
    <string name="fragment_trac_rate_comment">Comment</string>
    <string name="fragment_trac_rate_please_select_one_option">Please select one option</string>
    <string name="my_contact_list_search">search</string>
    <string name="my_contact_list_done">Done</string>
    <string name="my_contact_list_tap">tap on contact to select it</string>
    <string name="fragment_trac_review_trac_review">trac review</string>
    <string name="fragment_trac_review_personal_trac">Personal trac</string>
    <string name="fragment_trac_review_group_trac">Group trac</string>
    <string name="fragment_trac_review_started">Started</string>
    <string name="fragment_trac_review_finish">Finish</string>
    <string name="fragment_trac_review_trac_to_date">trac to date</string>
    <string name="fragment_trac_review_next">Next</string>
    <string name="fragment_trac_review_communicate_with_followers">Communicate with followers</string>
    <string name="fragment_trac_review_communicate_with_participants_and_followers">Communicate to participants and followers</string>
    <string name="fragment_trac_review_communicate_with_owner">Communicate with owner</string>
    <string name="fragment_trac_review_share_this_trac">Share this trac</string>
    <string name="fragment_trac_review_view_comments">View/Add Comments</string>
    <string name="fragment_trac_review_add_comments">Add Comment</string>
    <string name="custom_push_notification_dialog_title">Send Notification</string>
    <string name="custom_send_email_dialog_title">Send Email</string>
    <string name="custom_push_notification_dialog_message_hint">Message</string>
    <string name="custom_push_notification_dialog_enter_message">Enter message</string>
    <string name="delete_trac_dialog_title">Delete trac</string>
    <string name="delete_trac_dialog_message">Are you sure you want to delete this trac?</string>
    <string name="delete_followers_dialog_title">Delete follower</string>
    <string name="delete_participants_dialog_title">Delete participant</string>
    <string name="add_comment_dialog_anonymous">As anonymous</string>
    <string name="add_comment_dialog_for_owner_only">For owner only</string>
    <string name="help_activity_what_is_it">What is it?</string>
    <string name="help_activity_so_tell_me">So tell me what I can use this for...</string>
    <string name="help_activity_why">Why?</string>
    <string name="help_activity_how_will_it_help_me">How will it help me?</string>
    <string name="help_activity_how">How?</string>
    <string name="help_activity_how_do_i_work">How do I work it!</string>
</resources>