<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/twohundred"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.bluewavevision.tracmojo.customwidget.CustomTextView
        app:fontName="Roboto-Regular.ttf"
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:text="@string/forgot_pass_title"
        android:textColor="@color/blue_button_default_color"
        android:textSize="@dimen/font_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/twodp"
        android:background="@color/gray_or"/>

        <com.bluewavevision.tracmojo.customwidget.CustomEditText
            app:fontNameForEditText="Roboto-Regular.ttf"
            android:id="@+id/fogot_pass_et_email"
            android:layout_width="@dimen/threehundred_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginRight="@dimen/twenty"
            android:background="@drawable/edit_box_background"
            android:hint="@string/forgot_pass_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/tendp"
            android:textColor="@color/regular_text"
            android:textSize="@dimen/font_small"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty"
        android:weightSum="2">

        <com.bluewavevision.tracmojo.customwidget.CustomButton
            app:fontNameForButton="Roboto-Regular.ttf"
            android:id="@+id/fogot_pass_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dark_blue_button_selector"
            android:paddingBottom="@dimen/tendp"
            android:paddingTop="@dimen/tendp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_small" />

        <com.bluewavevision.tracmojo.customwidget.CustomButton
            app:fontNameForButton="Roboto-Regular.ttf"
            android:id="@+id/fogot_pass_btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_weight="1"
            android:background="@drawable/blue_button_selector"
            android:paddingBottom="@dimen/tendp"
            android:paddingTop="@dimen/tendp"
            android:text="@string/forgot_pass_send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

</LinearLayout>